<resources>
    <string name="app_name">Image Viewer</string>
    <string name="error_connection">It seems that the internet connection has been lost. Please try again or transfer on offline mode.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="label_image_slider">Image Slider</string>
    <string name="splash_first_part_title">andex</string>
    <string name="yandex_title">Yandex</string>
    <string name="splash_description">Mobile development school</string>
    <string name="splash_second_part_title">Y</string>
    <string name="all_content_description">I\'m sorry that you are blind</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="label_attention">Attention</string>
    <string name="label_confirm">Hello world!</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="go_to_offline_mode">No internet connection, go offline mode?</string>
    <string name="auth_message">Start browser to authorize?</string>
    <string name="image_success_download">Image success download</string>
    <string name="request_finish">request finish</string>
    <string name="menu_main_page">Online mode</string>
    <string name="menu_offline_page">Offline mode</string>
    <string name="scheme_cloud_drive">yandexdisk</string>

    <string name="dialog_cloud_drive_options_title">Which mode would you \nlike to switch to?</string>
    <string name="dialog_cloud_drive_options_save_image">@string/label_save_image</string>
    <string name="dialog_cloud_drive_options_delete_image">@string/label_delete_image</string>
    <string name="dialog_cloud_drive_options_full_mode_image">@string/label_full_mode_image</string>
    <string name="label_save_image">Save image</string>
    <string name="label_delete_image">Delete image</string>
    <string name="label_full_mode_image">Full mode image</string>
    <string name="ok">OK</string>

    <string name="image_success_deleted">Image success deleted</string>
    <string name="download_image_failed">An error occurred while loading the data. Check the network connection.</string>
    <string name="delete_image_failed">Delete image failed</string>
    <string name="loading">Loading</string>
    <string name="images_empty">There are no images on the cloud disk, download and pull them down</string>
    <string name="of" formatted="true">%1$d\u0020of\u0020%2$d</string>
    <string name="helper_for_online_feed">For save or delete a image, hold item</string>
    <string name="image_already_exists">Image is already in your phone \nplease check in offline mode</string>
    <string name="go_to_online_mode">There are no pictures in this section, do you want to go online mode?</string>
    <string name="network_connection">internet connection has appeared, please update pictures</string>
</resources>
