<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="36dp"
    android:layout_marginStart="36dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="31dp"
            android:layout_marginTop="31dp"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3.5sp"
            android:text="@string/dialog_cloud_drive_options_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray">
        </View>

        <TextView
            android:id="@+id/textview_full_mode_image"
            style="@style/TextViewItemOptions"
            android:drawableStart="@drawable/ic_full_mode_image"
            android:text="@string/dialog_cloud_drive_options_full_mode_image"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray">
        </View>

        <TextView
            android:id="@+id/textview_save_image"
            style="@style/TextViewItemOptions"
            android:drawableStart="@drawable/ic_save_image"
            android:text="@string/dialog_cloud_drive_options_save_image"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray">
        </View>

        <TextView
            android:id="@+id/textview_delete_image"
            style="@style/TextViewItemOptions"
            android:drawableStart="@drawable/ic_delete_image"
            android:text="@string/dialog_cloud_drive_options_delete_image"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray">
        </View>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_options_height"
            android:layout_marginTop="@dimen/dialog_options_margin"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_options_text_size"
            android:textStyle="normal"
            android:theme="@style/OrangeButtonTheme"/>
    </LinearLayout>

</ScrollView>