<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:clipToPadding="false"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/dialog_corner_radius"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="22dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@string/font_family_medium"
            android:text="@string/label_attention"
            android:textColor="@color/tomato"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textview_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textColor="@color/brownish_grey"
            android:textSize="14sp"
            tools:text="No internet connection, go offline mode?"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:theme="@style/OrangeButtonTheme"/>

            <Button
                android:id="@+id/button_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:theme="@style/GreenButtonTheme"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>