<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageview_icon"
                android:layout_width="@dimen/nav_header_imageview_icon_size"
                android:layout_height="@dimen/nav_header_imageview_icon_size"
                android:layout_marginStart="@dimen/nav_header_imageview_icon_margin"
                android:layout_marginTop="@dimen/nav_header_imageview_icon_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_header"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/nav_header_imageview_icon_margin"
                android:text="@string/yandex_title"
                android:textColor="@color/white"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageview_icon"/>


            <TextView
                android:id="@+id/textview_menu_item_online"
                style="@style/MenuItemStyle"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/menu_main_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_title"/>

            <TextView
                android:id="@+id/textview_menu_item_offline"
                style="@style/MenuItemStyle"
                android:layout_width="0dp"
                android:text="@string/menu_offline_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_menu_item_online"/>

            <View
                android:id="@+id/view_barrier"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_menu_item_offline"/>

            <TextView
                android:id="@+id/textview_menu_item_logout"
                style="@style/MenuItemStyle"
                android:layout_width="0dp"
                android:text="@string/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_menu_item_offline"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

</android.support.constraint.ConstraintLayout>